Use correct class for ghostty styling

--- a/default/hypr/apps/terminals.conf
+++ b/default/hypr/apps/terminals.conf
@@ -1,2 +1,2 @@
 # Define terminal tag to style them uniformly
-windowrule = tag +terminal, class:(Alacritty|kitty|ghostty)
+windowrule = tag +terminal, class:(Alacritty|kitty|com.mitchellh.ghostty)
