Add smart snapshot selection

--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -32,7 +32,7 @@ bindd = SHIFT CTRL, F2, Apple Display full brightness, exec, omarchy-cmd-apple-d
 # Screenshots
 bindd = , PRINT, Screenshot of region, exec, omarchy-cmd-screenshot
 bindd = SHIFT, PRINT, Screenshot of window, exec, omarchy-cmd-screenshot window
-bindd = CTRL, PRINT, Screenshot of display, exec, omarchy-cmd-screenshot output
+bindd = CTRL, PRINT, Screenshot of display, exec, omarchy-cmd-screenshot fullscreen
 
 # Screen recordings
 bindd = ALT, PRINT, Screen record a region, exec, omarchy-cmd-screenrecord region
