add bitwareden password manager option

--- a/default/hypr/apps/password_manager.conf
+++ b/default/hypr/apps/password_manager.conf
@@ -1,1 +1,1 @@
-windowrule = noscreenshare, class:^(1Password|org.keepassxc.KeePassXC)$
+windowrule = noscreenshare, class:^(1Password|org.keepassxc.KeePassXC|Bitwarden)$
